@@ -1,3 +1,9 @@
+2012-01-29  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/51972
+	* gfortran.dg/class_allocate_12.f90: Enable disabled test.
+	* gfortran.dg/class_48.f90: New.
+
 2012-01-29  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	PR fortran/51808
